<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".gContabilita">

    <ImageView
        android:id="@+id/logo_contabilita"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/nome_contabilita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomucca" />

    <TextView
        android:id="@+id/nome_contabilita"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:text="@string/s_a_f_milky"
        android:textColor="#631718"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_contabilita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_contabilita" />

    <TextView
        android:id="@+id/sottotitolo_contabilita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/smart_artificial_farming_milky"
        android:textColor="#85161E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_contabilita" />

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_contabilita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo_contabilita"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <LinearLayout
        android:id="@+id/barra_botton1"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_deposito5"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/deposito"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_manutenzione5"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/manutenzione"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ordini5"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/gestione_ordini"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_servizi5"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/gestione_servizi"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_contabilità5"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:backgroundTint="#868686"
            android:textColor="#ffffff"
            android:text="@string/contabilit"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/barra_botton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sottotitolo_contabilita">

        <Button
            android:id="@+id/fatturato"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/fatturato"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/spese"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/spese"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


