<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".fServizi">

    <ImageView
        android:id="@+id/logo_servizi"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/nome_servizi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomucca" />

    <TextView
        android:id="@+id/nome_servizi"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:text="@string/s_a_f_milky"
        android:textColor="#631718"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_servizi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_servizi" />

    <TextView
        android:id="@+id/sottotitolo_servizi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/smart_artificial_farming_milky"
        android:textColor="#85161E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_servizi" />

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_servizi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo_servizi"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <LinearLayout
        android:id="@+id/barra_botton1"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_deposito4"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/deposito"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_manutenzione4"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/manutenzione"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ordini4"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/gestione_ordini"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_servizi4"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#868686"
            android:textColor="#ffffff"
            android:text="@string/gestione_servizi"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_contabilità4"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/contabilit"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/Tabella_servizi"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/barra_botton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titolo_dipendenti">

        <TableRow
            android:id="@+id/prima_riga"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bordo3"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_orari"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:text="@string/orari"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_dipendente"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:text="@string/nomi_dei_dipendenti"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_mansione"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:text="@string/mansione"
                android:textColor="#F5000000"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/seconda_riga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome_orari"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:text="@string/_5_00_13_00"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="199dp"
                tools:layout_editor_absoluteY="305dp" />

            <TextView
                android:id="@+id/text_dipendente0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:text="@string/alessandro_rossi"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="233dp" />

            <TextView
                android:id="@+id/text_mansione0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:text="@string/produzione"
                android:textColor="#F5000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="224dp"
                tools:layout_editor_absoluteY="233dp" />
        </TableRow>

        <TableRow
            android:id="@+id/terza_riga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome_orari1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:text="@string/_8_00_16_00"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="199dp"
                tools:layout_editor_absoluteY="305dp" />

            <TextView
                android:id="@+id/text_dipendente1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:text="@string/emanuela_rossi"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="233dp" />

            <TextView
                android:id="@+id/text_mansione1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:text="@string/confezionamento"
                android:textColor="#F5000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="224dp"
                tools:layout_editor_absoluteY="233dp" />
        </TableRow>

        <TableRow
            android:id="@+id/quarta_riga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome_orari2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:text="@string/_12_00_20_00"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="199dp"
                tools:layout_editor_absoluteY="305dp" />

            <TextView
                android:id="@+id/text_dipendente2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:text="@string/giovanna_rossi"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="233dp" />

            <TextView
                android:id="@+id/text_mansione2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:text="@string/bancone"
                android:textColor="#F5000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="224dp"
                tools:layout_editor_absoluteY="233dp" />
        </TableRow>

        <TableRow
            android:id="@+id/quinta_riga"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bordo3"
            android:orientation="vertical">


            <TextView
                android:id="@+id/orario_vuoto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dipendenti_vuoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/mansione_vuoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo3"
                android:gravity="center"
                android:textColor="#F5000000" />

        </TableRow>

        <TableRow
            android:id="@+id/sesta_riga"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bordo4"
            android:orientation="vertical">


            <TextView
                android:id="@+id/orario_vuoto1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/dipendente_vuoto1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/mansione_vuoto1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordo4"
                android:gravity="center"
                android:textColor="#F5000000" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/titolo_dipendenti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="5dp"
        android:text="@string/turni_dei_dipendenti"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Tabella_servizi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sottotitolo_servizi" />
</androidx.constraintlayout.widget.ConstraintLayout>